SERVER-14754: Squelch GCC 4.9.1 warnings and linker error